[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -10,6 +10,7 @@
         <br>
         <div class="center text-big bold">
             Hi! I am Nina da Ninjaaaa!!
+            <h4> I am a coding pro... look at my website!!</h4>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
