[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -1,2 +1,29 @@
 <html>
+    <head>
+       <title> Article One | Nina</title> 
+    </head>
+    
+    <body>
+        <div>
+            <a href='/'>Home</a>
+        </div>
+        <hr/>
+        <h3>
+            Article One
+        </h3>
+        <div>
+            Aug 10 2017
+        </div>
+        <div>
+            <p>
+            This is the first article on my first web page...This is the first article on my first web page...This is the first article on my first web page...This is the first article on my first web page...This is the first article on my first web page...
+            </p>
+            <p>
+            This is the first article on my first web page...This is the first article on my first web page...This is the first article on my first web page...This is the first article on my first web page...This is the first article on my first web page...
+            </p>
+            <p>
+                This is the first article on my first web page...This is the first article on my first web page...This is the first article on my first web page...This is the first article on my first web page...This is the first article on my first web page...
+            </p>
+        </div>
+    </body>
 </html>
