--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -6,7 +6,7 @@
            .container {
                max-width: 950px;
                margin: 0 auto;
-               color: gold;
+               color: cyan;
                font-family:monospace ;
            }
            
