[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -6,7 +6,7 @@
            .container {
                max-width: 950px;
                margin: 0 auto;
-               color: cyan;
+               color:#C70039;
                font-family:monospace ;
            }
            
