[imad-console] Updates ui/articleone.html

--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -7,7 +7,7 @@
                max-width: 950px;
                margin: 0 auto;
                color:#C70039;
-               font-family:monospace ;
+               font-family:sans-serif ;
            }
            
        </style>
