--- a/ui/articleone.html
+++ b/ui/articleone.html
@@ -6,8 +6,11 @@
            .container {
                max-width: 950px;
                margin: 0 auto;
-               color:#C70039;
-               font-family:sans-serif ;
+               color:#003333;
+               font-family:sans-serif;
+               padding-top:40px;
+               padding-left: 60px;
+               padding-right: 60px;
            }
            
        </style>
