--- a/ui/articlethree.html
+++ b/ui/articlethree.html
@@ -2,29 +2,43 @@
     <head>
        <title> Article Three | Nina</title> 
        <meta name='viewport' content='width=device-width, initial-scale=1' />
+        <style>
+           .container {
+               max-width: 950px;
+               margin: 0 auto;
+               color:#003333;
+               font-family:sans-serif;
+               padding-top:40px;
+               padding-left: 60px;
+               padding-right: 60px;
+           }
+           
+       </style>
     </head>
     
     <body>
-        <div>
-            <a href='/'>Home</a>
-        </div>
-        <hr/>
-        <h3>
-            Article Three
-        </h3>
-        <div>
-            Aug 10 2017
-        </div>
-        <div>
-            <p>
-            This is the first article on my first web page...This is the first article on my first web page...This is the first article on my first web page...This is the first article on my first web page...This is the first article on my first web page...
-            </p>
-            <p>
-            This is the first article on my first web page...This is the first article on my first web page...This is the first article on my first web page...This is the first article on my first web page...This is the first article on my first web page...
-            </p>
-            <p>
+        <div class='container' >
+            <div>
+                <a href='/'>Home</a>
+            </div>
+            <hr/>
+            <h3>
+                Article Three
+            </h3>
+            <div>
+                Aug 10 2017
+            </div>
+            <div>
+                <p>
                 This is the first article on my first web page...This is the first article on my first web page...This is the first article on my first web page...This is the first article on my first web page...This is the first article on my first web page...
-            </p>
+                </p>
+                <p>
+                This is the first article on my first web page...This is the first article on my first web page...This is the first article on my first web page...This is the first article on my first web page...This is the first article on my first web page...
+                </p>
+                <p>
+                    This is the first article on my first web page...This is the first article on my first web page...This is the first article on my first web page...This is the first article on my first web page...This is the first article on my first web page...
+                </p>
+            </div>
         </div>
     </body>
 </html>
