[imad-console] Updates ui/articlethree.html

--- a/ui/articlethree.html
+++ b/ui/articlethree.html
@@ -2,18 +2,7 @@
     <head>
        <title> Article Three | Nina</title> 
        <meta name='viewport' content='width=device-width, initial-scale=1' />
-        <style>
-           .container {
-               max-width: 950px;
-               margin: 0 auto;
-               color:#003333;
-               font-family:sans-serif;
-               padding-top:40px;
-               padding-left: 60px;
-               padding-right: 60px;
-           }
-           
-       </style>
+       <link href="/ui/style.css" rel="stylesheet" />
     </head>
     
     <body>
