[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -4,13 +4,17 @@
         <link href="/ui/style.css" rel="stylesheet" />
     </head>
     <body>
-        <div class="center">
-            <img id ='maid' src="/ui/madi.png" class="img-medium"/>
-        </div>
-        <br>
-        <div class="center text-big bold">
-            Hi! I am Nina da Ninjaaaa!!
-            <h4> I am a coding pro... look at my website!!</h4>
+        <div class="container">
+            <div class="center">
+                <img id ='maid' src="https://s-media-cache-ak0.pinimg.com/originals/42/4b/96/424b96794c791b7df0716cdcd4659cc9.jpg" class="img-medium"/>
+            </div>
+            <hr/>
+            <br>
+            <h3> All About Me</h3>
+            <div>Hi my name is Nina
+            </div>
+            <hr/>
+            <div class='footer'></div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
