--- a/ui/index.html
+++ b/ui/index.html
@@ -14,6 +14,7 @@
             </div>
             <hr/>
             <div class='footer'></div>
+                This button <button id='counter'>Don't touch</button>has been clicked <span id='count'>0</span> times...
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
