--- a/ui/index.html
+++ b/ui/index.html
@@ -13,8 +13,9 @@
             <div>Hi my name is Nina
             </div>
             <hr/>
-            <div class='footer'></div>
+            <div class='footer'>
                 This button <button id="counter">Don't touch</button> has been clicked <span id="count">0</span> times...
+            </div>
         </div>
         <script type="text/javascript" src="/ui/main.js">
         </script>
