--- a/ui/index.html
+++ b/ui/index.html
@@ -16,9 +16,9 @@
             <div class='footer'>
                 This button <button id="counter">Don't touch</button> has been clicked <span id="count">0</span> times...
             </div>
-            <br/>
+            <hr/>
             <input type='text' id='name' placeholder='name'> </input>
-            <input type='submit' value='Submit'></input>
+            <input type='submit' value='Submit' id='submit_btn'></input>
             <ul>
                 <li>name1</li>
                 <li>name2</li>
