[imad-console] Updates ui/index.html

--- a/ui/index.html
+++ b/ui/index.html
@@ -9,14 +9,16 @@
                 <img id ='maid' src="https://s-media-cache-ak0.pinimg.com/originals/42/4b/96/424b96794c791b7df0716cdcd4659cc9.jpg" class="img-medium"/>
             </div>
             <br>
-            <h3> All About Me</h3>
-            <div>Hi my name is Nina
+            <h3> My First Web Page!!</h3>
+            <div>Created by Nina
             </div>
+            <br/>
             <hr/>
+            <br/>
             <div class='footer'>
                 This button <button id="counter">Don't touch</button> has been clicked <span id="count">0</span> times...
             </div>
-            <hr/>
+            <br/>
             <input type='text' id='name' placeholder='name'> </input>
             <input type='submit' value='Submit' id='submit_btn'></input>
             <ul id='namelist'></ul>
